--- a/src/client/Cargo.toml
+++ b/src/client/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 [features]
 testing = []
 
+[lints]
+workspace = true
+
 [dependencies]
 api.workspace = true
 arc-swap = "1.6"
