--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 [features]
 testing = []
 
+[lints]
+workspace = true
+
 [dependencies]
 api.workspace = true
 async-recursion = "1.0"
