--- a/src/datanode/Cargo.toml
+++ b/src/datanode/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 [features]
 testing = []
 
+[lints]
+workspace = true
+
 [dependencies]
 api.workspace = true
 arrow-flight.workspace = true
