--- a/src/promql/Cargo.toml
+++ b/src/promql/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 ahash.workspace = true
 async-recursion = "1.0"
