--- a/src/api/Cargo.toml
+++ b/src/api/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 common-base.workspace = true
 common-decimal.workspace = true
