--- a/src/auth/Cargo.toml
+++ b/src/auth/Cargo.toml
@@ -8,6 +8,9 @@ license.workspace = true
 default = []
 testing = []
 
+[lints]
+workspace = true
+
 [dependencies]
 api.workspace = true
 async-trait.workspace = true
