--- a/src/common/macro/Cargo.toml
+++ b/src/common/macro/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 [lib]
 proc-macro = true
 
+[lints]
+workspace = true
+
 [dependencies]
 proc-macro2 = "1.0.66"
 quote = "1.0"
