--- a/src/common/version/Cargo.toml
+++ b/src/common/version/Cargo.toml
@@ -4,5 +4,8 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 build-data = "0.1.4"
