--- a/src/common/wal/Cargo.toml
+++ b/src/common/wal/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 [features]
 testing = []
 
+[lints]
+workspace = true
+
 [dependencies]
 common-base.workspace = true
 common-telemetry.workspace = true
