--- a/src/datatypes/Cargo.toml
+++ b/src/datatypes/Cargo.toml
@@ -8,6 +8,9 @@ license.workspace = true
 default = []
 test = []
 
+[lints]
+workspace = true
+
 [dependencies]
 arrow.workspace = true
 arrow-array.workspace = true
