--- a/src/file-engine/Cargo.toml
+++ b/src/file-engine/Cargo.toml
@@ -8,6 +8,9 @@ license.workspace = true
 default = []
 test = ["common-test-util"]
 
+[lints]
+workspace = true
+
 [dependencies]
 api = { workspace = true, optional = true }
 async-trait = "0.1"
