--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 api.workspace = true
 bimap = "0.6.3"
