--- a/src/frontend/Cargo.toml
+++ b/src/frontend/Cargo.toml
@@ -9,6 +9,9 @@ default = ["python"]
 python = ["dep:script"]
 testing = []
 
+[lints]
+workspace = true
+
 [dependencies]
 api.workspace = true
 arc-swap = "1.0"
