--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 async-trait.workspace = true
 asynchronous-codec = "0.7.0"
