--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 [features]
 testing = []
 
+[lints]
+workspace = true
+
 [dependencies]
 api.workspace = true
 async-trait = "0.1"
