--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,8 +68,9 @@ license = "Apache-2.0"
 
 [workspace.lints]
 clippy.print_stdout = "warn"
-clippy.print_sterr = "warn"
+clippy.print_stderr = "warn"
 clippy.implicit_clone = "warn"
+rust.unknown_lints = "deny"
 
 [workspace.dependencies]
 ahash = { version = "0.8", features = ["compile-time-rng"] }
