--- a/src/metric-engine/Cargo.toml
+++ b/src/metric-engine/Cargo.toml
@@ -20,6 +20,7 @@ common-telemetry.workspace = true
 common-time.workspace = true
 datafusion.workspace = true
 datatypes.workspace = true
+futures-util.workspace = true
 itertools.workspace = true
 lazy_static = "1.4"
 mito2.workspace = true
