--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -18,6 +18,7 @@ async-trait.workspace = true
 base64.workspace = true
 bytes.workspace = true
 chrono.workspace = true
+common-base.workspace = true
 common-catalog.workspace = true
 common-error.workspace = true
 common-grpc-expr.workspace = true
