--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -34,6 +34,7 @@ serde_json.workspace = true
 session.workspace = true
 snafu.workspace = true
 statrs = "0.16"
+store-api.workspace = true
 table.workspace = true
 
 [dev-dependencies]
