feat: impl flush_region, flush_table, compact_region, and flush_region functions

--- a/src/session/Cargo.toml
+++ b/src/session/Cargo.toml
@@ -18,4 +18,5 @@ common-catalog.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
 derive_builder.workspace = true
+snafu.workspace = true
 sql.workspace = true
