chore: skip reorder workspace tables in taplo
Signed-off-by: Ruihang Xia <waynestxia@gmail.com>

--- a/taplo.toml
+++ b/taplo.toml
@@ -34,3 +34,7 @@ crlf = false
 [[rule]]
 keys = ["build-dependencies", "dependencies", "dev-dependencies", "workspace.dependencies"]
 formatting = { reorder_keys = true }
+
+[[rule]]
+keys = ["package", "workspace.package"]
+formatting = { reorder_keys = false }
