--- a/src/common/wal/Cargo.toml
+++ b/src/common/wal/Cargo.toml
@@ -11,12 +11,14 @@ testing = []
 workspace = true
 
 [dependencies]
+async-trait.workspace = true
 common-base.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-telemetry.workspace = true
 futures-util.workspace = true
 humantime-serde.workspace = true
+mockall.workspace = true
 rskafka.workspace = true
 serde.workspace = true
 serde_with.workspace = true
