--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -29,3 +29,6 @@ session.workspace = true
 snafu.workspace = true
 tokio.workspace = true
 tonic.workspace = true
+
+[dev-dependencies]
+serde_json = "1.0"
