--- a/src/partition/Cargo.toml
+++ b/src/partition/Cargo.toml
@@ -16,9 +16,9 @@ common-macro.workspace = true
 common-meta.workspace = true
 common-query.workspace = true
 common-telemetry.workspace = true
-datafusion.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
+datafusion.workspace = true
 datatypes.workspace = true
 itertools.workspace = true
 lazy_static.workspace = true
@@ -28,5 +28,7 @@ prometheus.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
+sql.workspace = true
+sqlparser.workspace = true
 store-api.workspace = true
 table.workspace = true
