feat: employ short key encoding for shard lookup

--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -73,5 +73,11 @@ uuid.workspace = true
 [dev-dependencies]
 common-procedure-test.workspace = true
 common-test-util.workspace = true
+criterion = "0.4"
 log-store.workspace = true
 rand.workspace = true
+
+
+[[bench]]
+name = "bench_merge_tree"
+harness = false
