--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -60,6 +60,7 @@ itertools.workspace = true
 lazy_static.workspace = true
 mime_guess = "2.0"
 notify = "6.1"
+object-pool = "0.5"
 once_cell.workspace = true
 openmetrics-parser = "0.4"
 opensrv-mysql = "0.7.0"
