--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -244,6 +244,13 @@ mem_threshold_on_create = "64M"
 # File system path to store intermediate files for external sorting (default `{data_home}/index_intermediate`).
 intermediate_path = ""
 
+[region_engine.mito.memtable]
+type = "experimental"
+index_max_keys_per_shard = 8192
+data_freeze_threshold = 32768
+dedup = true
+fork_dictionary_bytes = "1GiB"
+
 # Log options
 # [logging]
 # Specify logs directory.
