--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -75,6 +75,7 @@ common-procedure-test.workspace = true
 common-test-util.workspace = true
 criterion = "0.4"
 log-store.workspace = true
+toml.workspace = true
 rand.workspace = true
 
 [[bench]]
