--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -76,6 +76,7 @@ common-test-util.workspace = true
 criterion = "0.4"
 log-store.workspace = true
 rand.workspace = true
+toml.workspace = true
 
 [[bench]]
 name = "bench_merge_tree"
