--- a/tests-fuzz/Cargo.toml
+++ b/tests-fuzz/Cargo.toml
@@ -7,15 +7,22 @@ license.workspace = true
 [lints]
 workspace = true
 
+[package.metadata]
+cargo-fuzz = true
+
 [dependencies]
+arbitrary = { version = "1.3.0", features = ["derive"] }
 async-trait = { workspace = true }
 common-error = { workspace = true }
 common-macro = { workspace = true }
 common-query = { workspace = true }
+common-runtime = { workspace = true }
 common-telemetry = { workspace = true }
 datatypes = { workspace = true }
 derive_builder = { workspace = true }
+dotenv = "0.15"
 lazy_static = { workspace = true }
+libfuzzer-sys = "0.4"
 partition = { workspace = true }
 rand = { workspace = true }
 rand_chacha = "0.3.1"
@@ -24,6 +31,12 @@ serde_json = { workspace = true }
 snafu = { workspace = true }
 sql = { workspace = true }
 sqlparser.workspace = true
+sqlx = { version = "0.6", features = [
+    "runtime-tokio-rustls",
+    "mysql",
+    "postgres",
+    "chrono",
+] }
 
 [dev-dependencies]
 dotenv = "0.15"
@@ -34,3 +47,10 @@ sqlx = { version = "0.6", features = [
     "chrono",
 ] }
 tokio = { workspace = true }
+
+[[bin]]
+name = "fuzz_create_table"
+path = "targets/fuzz_create_table.rs"
+test = false
+bench = false
+doc = false
