chore: run fuzz test in debug mode

--- a/.github/actions/fuzz-test/action.yaml
+++ b/.github/actions/fuzz-test/action.yaml
@@ -17,7 +17,7 @@ runs:
           steps:
           - name: Run Fuzz Test
             shell: bash
-            run: cargo fuzz run ${{ inputs.target }} --fuzz-dir tests-fuzz -- -max_total_time=120
+            run: cargo fuzz run ${{ inputs.target }} --fuzz-dir tests-fuzz -D -s none -- -max_total_time=120
             env:
               GT_MYSQL_ADDR: 127.0.0.1:4002
         EOF
