--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -8,12 +8,26 @@ license.workspace = true
 workspace = true
 
 [dependencies]
+api.workspace = true
 arrow.workspace = true
 chrono.workspace = true
 clap.workspace = true
 client.workspace = true
+common-base.workspace = true
+common-telemetry.workspace = true
+common-wal.workspace = true
 futures-util.workspace = true
+futures.workspace = true
 indicatif = "0.17.1"
 itertools.workspace = true
+lazy_static.workspace = true
+log-store.workspace = true
+mito2.workspace = true
+num_cpus.workspace = true
 parquet.workspace = true
+prometheus.workspace = true
+rand.workspace = true
+rskafka.workspace = true
+store-api.workspace = true
 tokio.workspace = true
+uuid.workspace = true
