--- a/tests-integration/fixtures/etcd/docker-compose-standalone.yml
+++ b/tests-integration/fixtures/etcd/docker-compose-standalone.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   etcd:
-    image: public.ecr.aws/bitnami/etcd:3.5
+    image: ghcr.io/zcube/bitnami-compat/etcd:3.5
     ports:
       - "2379:2379"
       - "2380:2380"
