chore: remove duplicate bench

--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -79,5 +79,6 @@ rand.workspace = true
 toml.workspace = true
 
 [[bench]]
-name = "bench_merge_tree"
+name = "merge_tree_bench"
 harness = false
+required-features = ["test"]
