--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -79,6 +79,6 @@ rand.workspace = true
 toml.workspace = true
 
 [[bench]]
-name = "merge_tree_bench"
+name = "memtable_bench"
 harness = false
 required-features = ["test"]
