--- a/tests-fuzz/Cargo.toml
+++ b/tests-fuzz/Cargo.toml
@@ -18,6 +18,7 @@ common-macro = { workspace = true }
 common-query = { workspace = true }
 common-runtime = { workspace = true }
 common-telemetry = { workspace = true }
+common-time = { workspace = true }
 datatypes = { workspace = true }
 derive_builder = { workspace = true }
 dotenv = "0.15"
@@ -39,18 +40,18 @@ sqlx = { version = "0.6", features = [
 ] }
 
 [dev-dependencies]
-dotenv = "0.15"
-sqlx = { version = "0.6", features = [
-    "runtime-tokio-rustls",
-    "mysql",
-    "postgres",
-    "chrono",
-] }
 tokio = { workspace = true }
 
 [[bin]]
 name = "fuzz_create_table"
 path = "targets/fuzz_create_table.rs"
+test = false
+bench = false
+doc = false
+
+[[bin]]
+name = "fuzz_insert"
+path = "targets/fuzz_insert.rs"
 test = false
 bench = false
 doc = false
