--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -25,6 +25,7 @@ num-traits = "0.2"
 serde.workspace = true
 servers.workspace = true
 session.workspace = true
+smallvec.workspace = true
 snafu.workspace = true
 tokio.workspace = true
 tonic.workspace = true
