--- a/src/sql/Cargo.toml
+++ b/src/sql/Cargo.toml
@@ -16,7 +16,12 @@ common-error.workspace = true
 common-macro.workspace = true
 common-query.workspace = true
 common-time.workspace = true
+chrono.workspace = true
+datafusion-common.workspace = true
+datafusion-expr.workspace = true
+datafusion-physical-expr.workspace = true
 datafusion-sql.workspace = true
+datafusion.workspace = true
 datatypes.workspace = true
 hex = "0.4"
 itertools.workspace = true
