--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -58,7 +58,7 @@ prost.workspace = true
 puffin.workspace = true
 rand.workspace = true
 regex = "1.5"
-serde = { version = "1.0", features = ["derive"] }
+serde.workspace = true
 serde_json.workspace = true
 serde_with.workspace = true
 smallvec.workspace = true
