chore: compute module folder

--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -19,7 +19,6 @@ common-telemetry.workspace = true
 common-time.workspace = true
 datatypes.workspace = true
 enum_dispatch = "0.3"
-hydroflow = "0.5.0"
 itertools.workspace = true
 num-traits = "0.2"
 serde.workspace = true
@@ -29,6 +28,8 @@ smallvec.workspace = true
 snafu.workspace = true
 tokio.workspace = true
 tonic.workspace = true
+# using a git dependency to get our own fork of hydroflow crate
+hydroflow = { git = "https://github.com/GreptimeTeam/hydroflow", branch = "tee_port" }
 
 [dev-dependencies]
 serde_json = "1.0"
