--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -23,8 +23,8 @@ common-catalog.workspace = true
 common-error.workspace = true
 common-grpc-expr.workspace = true
 common-macro.workspace = true
-common-procedure.workspace = true
 common-procedure-test.workspace = true
+common-procedure.workspace = true
 common-recordbatch.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
@@ -33,8 +33,8 @@ common-wal.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 etcd-client.workspace = true
-futures.workspace = true
 futures-util.workspace = true
+futures.workspace = true
 hex = { version = "0.4" }
 humantime-serde.workspace = true
 itertools.workspace = true
@@ -53,6 +53,7 @@ strum.workspace = true
 table.workspace = true
 tokio.workspace = true
 tonic.workspace = true
+typetag = "0.2"
 
 [dev-dependencies]
 chrono.workspace = true
