--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -246,9 +246,9 @@ intermediate_path = ""
 
 [region_engine.mito.memtable]
 # Memtable type.
-# - "experimental": experimental memtable
+# - "partition_tree": partition tree memtable
 # - "time_series": time-series memtable (deprecated)
-type = "experimental"
+type = "partition_tree"
 # The max number of keys in one shard.
 index_max_keys_per_shard = 8192
 # The max rows of data inside the actively writing buffer in one shard.
