feat: support set variable statement of session

--- a/src/session/Cargo.toml
+++ b/src/session/Cargo.toml
@@ -17,6 +17,7 @@ auth.workspace = true
 common-catalog.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
+dashmap.workspace = true
 derive_builder.workspace = true
 snafu.workspace = true
 sql.workspace = true
