--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -10,6 +10,7 @@ workspace = true
 [dependencies]
 ahash.workspace = true
 api.workspace = true
+auth.workspace = true
 arc-swap = "1.0"
 arrow.workspace = true
 arrow-schema.workspace = true
