--- a/src/auth/Cargo.toml
+++ b/src/auth/Cargo.toml
@@ -16,6 +16,7 @@ api.workspace = true
 async-trait.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
+common-telemetry.workspace = true
 digest = "0.10"
 hex = { version = "0.4" }
 notify.workspace = true
