--- a/src/auth/Cargo.toml
+++ b/src/auth/Cargo.toml
@@ -20,6 +20,7 @@ common-telemetry.workspace = true
 digest = "0.10"
 hex = { version = "0.4" }
 notify.workspace = true
+notify-debouncer-full.workspace = true
 secrecy = { version = "0.8", features = ["serde", "alloc"] }
 sha1 = "0.10"
 snafu.workspace = true
