--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,6 +111,7 @@ meter-core = { git = "https://github.com/GreptimeTeam/greptime-meter.git", rev =
 mockall = "0.11.4"
 moka = "0.12"
 notify = "6.1"
+notify-debouncer-full = "0.3"
 num_cpus = "1.16"
 once_cell = "1.18"
 opentelemetry-proto = { git = "https://github.com/waynexia/opentelemetry-rust.git", rev = "33841b38dda79b15f2024952be5f32533325ca02", features = [
