--- a/src/session/Cargo.toml
+++ b/src/session/Cargo.toml
@@ -15,6 +15,8 @@ api.workspace = true
 arc-swap = "1.5"
 auth.workspace = true
 common-catalog.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
 dashmap.workspace = true
