chore: retain original headers
Signed-off-by: tison <wander4096@gmail.com>

--- a/licenserc.toml
+++ b/licenserc.toml
@@ -19,6 +19,12 @@ includes = [
     "*.py",
 ]
 
+excludes = [
+    # copied sources
+    "src/common/base/src/readable_size.rs",
+    "src/servers/src/repeated_field.rs",
+]
+
 [properties]
 inceptionYear = 2023
 copyrightOwner = "Greptime Team"
