feat: implement the drop database procedure (#3541)
* refactor: remove Sync trait of Procedure

* refactor: remove unnecessary async

* feat: implement the drop database procedure

* refactor: refactor DdlManager register_loaders

* feat: register the DropDatabaseProcedureLoader

* chore: fmt toml

* feat: support to submit DropDatabaseTask

* feat: support drop database stmt

* fix: empty the tables stream

* fix: ensure the factory always exists

* test: update sqlness results

* chore: correct comments

* test: update sqlness results

* test: update sqlness results

* chore: apply suggestions from CR

* chore: apply suggestions from CR

--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -53,6 +53,7 @@ strum.workspace = true
 table.workspace = true
 tokio.workspace = true
 tonic.workspace = true
+typetag = "0.2"
 
 [dev-dependencies]
 chrono.workspace = true
