--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -16,7 +16,7 @@ common-telemetry.workspace = true
 common-time.workspace = true
 datatypes.workspace = true
 enum_dispatch = "0.3"
-hydroflow = "0.5.0"
+hydroflow = { git = "https://github.com/hydro-project/hydroflow.git", rev = "f29c710e62d45a819b0c44125f94be207ffd5d83" }
 itertools.workspace = true
 num-traits = "0.2"
 serde.workspace = true
