chore: limit OpenDAL's feature gates
Signed-off-by: Ruihang Xia <waynestxia@gmail.com>

--- a/src/object-store/Cargo.toml
+++ b/src/object-store/Cargo.toml
@@ -20,7 +20,14 @@ md5 = "0.7"
 moka = { workspace = true, features = ["future"] }
 opendal = { version = "0.45", features = [
     "layers-tracing",
-] }
+    "rustls",
+    "services-azblob",
+    "services-fs",
+    "services-gcs",
+    "services-http",
+    "services-oss",
+    "services-s3",
+], default-features = false }
 prometheus.workspace = true
 snafu.workspace = true
 uuid.workspace = true
@@ -29,4 +36,5 @@ uuid.workspace = true
 anyhow = "1.0"
 common-telemetry.workspace = true
 common-test-util.workspace = true
+opendal = { version = "0.45", features = ["services-memory"] }
 tokio.workspace = true
