--- a/src/session/Cargo.toml
+++ b/src/session/Cargo.toml
@@ -20,4 +20,5 @@ common-macro.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
 derive_builder.workspace = true
+snafu.workspace = true
 sql.workspace = true
