chore: add back core dependency

--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -38,6 +38,7 @@ futures = "0.3"
 futures-util.workspace = true
 lazy_static.workspace = true
 meta-client.workspace = true
+meter-core.workspace = true
 meter-macros.workspace = true
 object-store.workspace = true
 partition.workspace = true
