--- a/src/object-store/Cargo.toml
+++ b/src/object-store/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 [lints]
 workspace = true
 
+[features]
+services-memory = ["opendal/services-memory"]
+
 [dependencies]
 async-trait = "0.1"
 bytes.workspace = true
