--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -41,7 +41,7 @@ datatypes.workspace = true
 futures = "0.3"
 futures-util.workspace = true
 greptime-proto.workspace = true
-humantime = "2.1"
+humantime.workspace = true
 lazy_static.workspace = true
 meter-core.workspace = true
 meter-macros.workspace = true
