--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -16,8 +16,10 @@ client.workspace = true
 common-base.workspace = true
 common-telemetry.workspace = true
 common-wal.workspace = true
+dotenv.workspace = true
 futures.workspace = true
 futures-util.workspace = true
+humantime.workspace = true
 indicatif = "0.17.1"
 itertools.workspace = true
 lazy_static.workspace = true
@@ -28,6 +30,8 @@ parquet.workspace = true
 prometheus.workspace = true
 rand.workspace = true
 rskafka.workspace = true
+serde.workspace = true
 store-api.workspace = true
 tokio.workspace = true
+toml.workspace = true
 uuid.workspace = true
