--- a/tests-fuzz/Cargo.toml
+++ b/tests-fuzz/Cargo.toml
@@ -26,7 +26,7 @@ sql = { workspace = true }
 sqlparser.workspace = true
 
 [dev-dependencies]
-dotenv = "0.15"
+dotenv.workspace = true
 sqlx = { version = "0.6", features = [
     "runtime-tokio-rustls",
     "mysql",
