feat: better way to get function info from str and name

--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -26,6 +26,7 @@ snafu.workspace = true
 tokio.workspace = true
 tonic.workspace = true
 datafusion-substrait.workspace = true
+strum.workspace = true
 
 [dependencies.substrait_proto]
 package = "substrait"
