--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -20,6 +20,7 @@ dotenv.workspace = true
 futures.workspace = true
 futures-util.workspace = true
 humantime.workspace = true
+humantime-serde.workspace = true
 indicatif = "0.17.1"
 itertools.workspace = true
 lazy_static.workspace = true
