--- a/src/common/procedure/Cargo.toml
+++ b/src/common/procedure/Cargo.toml
@@ -14,6 +14,7 @@ workspace = true
 async-stream.workspace = true
 async-trait.workspace = true
 backon = "0.4"
+common-base.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-runtime.workspace = true
