--- a/src/common/procedure/Cargo.toml
+++ b/src/common/procedure/Cargo.toml
@@ -24,6 +24,7 @@ humantime-serde.workspace = true
 object-store.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+serde_with.workspace = true
 smallvec.workspace = true
 snafu.workspace = true
 tokio.workspace = true
