chore: rename to `max_metadata_value_size`

--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -30,10 +30,11 @@ max_retry_times = 12
 # Initial retry delay of procedures, increases exponentially
 retry_delay = "500ms"
 # Auto split large value
+# GreptimeDB procedure uses etcd as the default metadata storage backend.
 # The etcd the maximum size of any request is 1.5 MiB
 # 1535KiB = 1536KiB (1.5MiB) - 1KiB (reserved size of key)
 # If it's empty, it stands for no limit.
-max_value_size = "1535KiB"
+max_metadata_value_size = "1535KiB"
 
 # Failure detectors options.
 [failure_detector]
