--- a/src/table/Cargo.toml
+++ b/src/table/Cargo.toml
@@ -29,7 +29,7 @@ datafusion-physical-expr.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
-humantime = "2.1"
+humantime.workspace = true
 humantime-serde.workspace = true
 paste = "1.0"
 serde.workspace = true
