--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -26,6 +26,8 @@ common-time.workspace = true
 common-wal.workspace = true
 futures.workspace = true
 futures-util.workspace = true
+lazy_static.workspace = true
+prometheus.workspace = true
 protobuf = { version = "2", features = ["bytes"] }
 raft-engine.workspace = true
 rskafka.workspace = true
