--- a/tests-fuzz/Cargo.toml
+++ b/tests-fuzz/Cargo.toml
@@ -40,6 +40,7 @@ sqlx = { version = "0.6", features = [
 ] }
 
 [dev-dependencies]
+dotenv.workspace = true
 tokio = { workspace = true }
 
 [[bin]]
