--- a/src/catalog/Cargo.toml
+++ b/src/catalog/Cargo.toml
@@ -40,6 +40,7 @@ prometheus.workspace = true
 serde_json.workspace = true
 session.workspace = true
 snafu.workspace = true
+sql.workspace = true
 store-api.workspace = true
 table.workspace = true
 tokio.workspace = true
