feat: add checksum for checkpoint data
Signed-off-by: tison <wander4096@gmail.com>

--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -31,6 +31,7 @@ common-telemetry.workspace = true
 common-test-util = { workspace = true, optional = true }
 common-time.workspace = true
 common-wal.workspace = true
+crc32fast = "1"
 datafusion.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
