refactor: func's specialization& use Error not EvalError

--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -25,6 +25,7 @@ serde.workspace = true
 servers.workspace = true
 smallvec.workspace = true
 snafu.workspace = true
+strum.workspace = true
 tokio.workspace = true
 tonic.workspace = true
 
