chore: unify name

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -39,7 +39,7 @@ body:
         - Query Engine
         - Table Engine
         - Write Protocols
-        - MetaSrv
+        - Metasrv
         - Frontend
         - Datanode
         - Other
