--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -27,6 +27,7 @@ common-wal.workspace = true
 futures.workspace = true
 futures-util.workspace = true
 lazy_static.workspace = true
+parking_lot.workspace = true
 prometheus.workspace = true
 protobuf = { version = "2", features = ["bytes"] }
 raft-engine.workspace = true
